test/integration/good/tuples/simple.stan
transformed data {
  (real, int) x = (3.14, 2);
  print(x.1);
}
