test/integration/bad/for_loops/name_in_use.stan
data {
  int N;
}
generated quantities {
  int foo;

  for (foo in 1:N) {
    print("foo");
  }
}
